[project]
name = "probabilistic-information-processing"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "yuta-nishi", email = "ypmtk437.0209@gmail.com" }
]
dependencies = [
    "matplotlib~=3.7.1",
    "numpy~=1.24.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black~=23.3.0",
    "pip-search~=0.0.12",
]

[tool.hatch.metadata]
allow-direct-references = true
